Make sure table content is always visible

--- a/piracymoe/static/css/custom.css
+++ b/piracymoe/static/css/custom.css
@@ -179,6 +179,10 @@ tbody > tr:hover {
     vertical-align: unset !important;
 }
 
+.rounded-circle {
+    flex-shrink: 0;
+}
+
 .no-wrap {
     white-space: nowrap !important;
 }
